unit_tests/preprocessor/errors/unknown-directive.correct
preprocessor/errors/unknown-directive:1: error: unknown directive "#something"
